--- a/package.json
+++ b/package.json
@@ -2,43 +2,35 @@
   "name": "proyecto2_front_end",
   "version": "1.0.0",
   "description": "Frontend para plataforma de domicilios en moto",
-  "main": "src/index.tsx",
+  "main": "src/main.tsx",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "axios": "^1.9.0",
+    "firebase": "^11.7.3",
+    "framer-motion": "^12.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
-    "typescript": "4.9.5"
+    "react-social-login-buttons": "^4.1.1",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.17",
-    "@types/react-router-dom": "^5.3.3",
+    "@types/node": "^22.15.18",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.4.3"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.3.5"
   }
 }
