--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.7.3",
     "framer-motion": "^12.12.1",
     "react": "^18.2.0",
+    "react-chatbot-kit": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
